tests/should_fail/bug/1762.stderr
error: called program function `faux` in logic context
  --> 1762.rs:10:12
   |
10 | #[requires(faux())] // program function called in logic
   |            ^^^^

error: aborting due to 1 previous error

